--- a/src/css/style.css
+++ b/src/css/style.css
@@ -66,6 +66,7 @@ nav {
   padding: 0 4rem;
   transition: height var(--fast);
   border-bottom: 4px solid var(--black);
+  z-index: 10;
 }
 
 h1 {
@@ -332,6 +333,23 @@ textarea {
   color: var(--white);
 }
 
+#loading {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--white);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity var(--fast);
+}
+
+.loaded {
+  opacity: 0;
+}
+
 /* ================================================== Footer */
 
 footer {
@@ -347,4 +365,33 @@ footer span {
   color: var(--white);
   font-size: 1rem;
   text-align: center;
+}
+
+/* ================================================== External */
+
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+
+.lds-dual-ring:after {
+  content: "";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid var(--secondary);
+  border-color: var(--secondary) transparent var(--secondary) transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
